# direct_summation_comparison

./: CMakeLists.txt  Makefile  README.md  compare_runs.py
01_serial/: CMakeLists.txt  main.cpp
02_kokkos_1d_vec/: CMakeLists.txt  main.cpp
02_kokkos_1d_view/: CMakeLists.txt  main.cpp
03_kokkos_1d_view/: CMakeLists.txt  main.cpp
04_kokkos_1d_view_dx/: CMakeLists.txt  main.cpp
04_kokkos_1d_view_tmp_storage/: CMakeLists.txt  main.cpp
05_kokkos_2d_view/: CMakeLists.txt  main.cpp
06_kokkos_2d_view_layout_left/: CMakeLists.txt  main.cpp
06_kokkos_2d_view_left/: CMakeLists.txt  main.cpp
utils/: animate.py  gen_ic.py  plot.py
